--- a/frontend/src/components/AdminManagement/Navigation/header.css
+++ b/frontend/src/components/AdminManagement/Navigation/header.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 .admin-header {
     display: flex;
     justify-content: space-between;
@@ -7,7 +8,7 @@
     margin-top: 0px;
     padding: 10px 20px;
     box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.2);
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
     margin-left: 0px;
     transition: width 0.3s ease-in-out, margin-left 0.3s ease-in-out;
 }
