--- a/frontend/src/components/AdminManagement/Navigation/navbar.css
+++ b/frontend/src/components/AdminManagement/Navigation/navbar.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
+
 .admin-sidebar-container {
     display: flex;
     height: 150vh;
-    /*font-family: "Inter", sans-serif;*/
-    font-family: Arial, sans-serif
+    font-family: 'Inter', sans-serif;
   }
   
   /* Sidebar */
@@ -21,7 +23,7 @@
   }
   
   .admin-sidebar.collapsed {
-    width: 75px;
+    width: 76px;
   }
   
   .admin-toggle-icon {
@@ -62,6 +64,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    margin-left: -3px;
   }
   
   .admin-nav a {
@@ -70,20 +73,25 @@
   }
   
   .admin-nav-link.active .admin-nav-item {
-    background-color: rgb(255, 255, 255); /* Highlight color */
-    color:black;
+    background-color: rgb(255, 255, 255); 
+    color:#6dacff;
     border-radius: 10px;
+    padding-left: 1px;
+    padding-right: 2px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-left: 1px;
   }
   
   .admin-nav-item {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 7px;
     cursor: pointer;
     position: relative;
     z-index: 10;
-    transition: background 0.2s;
-    gap: 20px;
+    transition: background 0.2s, transform 0.2s ease-in-out;
+    gap: 15px;
   }
   
   .admin-nav-item:hover {
@@ -91,17 +99,29 @@
     border-radius: 10px;
     transform: scale(1.05);
   }
+
+  .admin-sidebar.collapsed .admin-nav-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+}
   
-  .admin-icon {
-    font-size:20px;
+  .adminicon {
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
+    width: 27px; 
+    height: 27px; 
+    transition: none; 
   }
   
   .admin-icon-img {
     width: 24px;
     height: 24px;
-    margin-left: 5px;
     object-fit: contain;
   }
+
   
   /* Hide text when collapsed */
   .admin-sidebar.collapsed .admin-text {
@@ -112,7 +132,7 @@
   .admin-tooltip {
     position: absolute;
     left: 70px;
-    background: #4338ca;
+    background: #000000;
     color: white;
     padding: 4px 8px;
     border-radius: 5px;
