--- a/frontend/src/components/AdminManagement/adminDash.css
+++ b/frontend/src/components/AdminManagement/adminDash.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .admin-dashboard-container {
   background-color: #ffffff;
   min-height: 100vh;
   padding: 0px;
-  font-family: Arial, sans-serif;
 }
 
 /* Ensure content takes up remaining space */
@@ -36,7 +38,7 @@
 }
 
 .admin-greet {
-  font-family: Arial, sans-serif;
+  font-family: 'Inter', sans-serif;
   font-weight: normal;
   font-size: 18px;
   color: #525252ca;
@@ -46,7 +48,7 @@
   background-color: #1e64f0;
   color: white;
   font-weight: semi-bold;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size: 16px;
   border: none;
   border-radius: 11px;
@@ -85,6 +87,7 @@
 }
 
 .admin-stat-card {
+  font-family: 'Roboto', sans-serif;
   background: white;
   padding: 23px;
   border-radius: 12px;
@@ -171,23 +174,21 @@
 
 .admin-chart-card {
   background: white;
+  font-family: 'Roboto', sans-serif;
   padding: 20px;
   border-radius: 10px;
   text-align: center;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  height: 200px;
+  height: 270px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.admin-chart-placeholder {
-  font-size: 40px;
-  color: gray;
-}
 .admin-chart-container {
+  font-size: 15px;
   width: 100%;
-  height: 150px; /* Adjust as needed */
+  height: 155px; 
 }
 
 .admin-main-content-tasks {
@@ -203,6 +204,7 @@
 
 .admin-progress-card {
   background: white;
+  font-family: 'Roboto', sans-serif;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
