--- a/frontend/src/components/AdminManagement/Navigation/navbar.css
+++ b/frontend/src/components/AdminManagement/Navigation/navbar.css
@@ -76,11 +76,11 @@
     background-color: rgb(255, 255, 255); 
     color:#6dacff;
     border-radius: 10px;
-    padding-left: 1px;
+    padding-left: 9px;
     padding-right: 2px;
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-left: 1px;
+    margin-left: 2px;
   }
   
   .admin-nav-item {
@@ -91,6 +91,7 @@
     position: relative;
     z-index: 10;
     transition: background 0.2s, transform 0.2s ease-in-out;
+    margin-left: 7px;
     gap: 15px;
   }
   
@@ -132,7 +133,7 @@
   .admin-tooltip {
     position: absolute;
     left: 70px;
-    background: #000000;
+    background: #00082d;
     color: white;
     padding: 4px 8px;
     border-radius: 5px;
